2004-07-07  Stefan Jahn  <stefan@lkcc.org>

	* devices/bjt.cpp: Started to implement the DC model of the
	standard SGP (Spice Gummel Poon) model fo BJTs.
	Fixed the Rbb model of SGP.

2004-07-04  Stefan Jahn  <stefan@lkcc.org>

	* resistor.cpp: Using new 'Temp' property for noise parameter
	simulation.

2004-06-27  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msline.cpp: Using 'DispModel' and 'Model' 
	properties correctly.

2004-06-26  Michael Margraf  <michael.margraf@alumni.tu-berlin.de

	* added DC model to phaseshifter.cpp/.h

2004-06-26  Stefan Jahn  <stefan@lkcc.org>

	* constants.h: Globally defined sqr, cubic, quad, coth, sech
	and cosech functions.

	* resistor.cpp: Added noise wave correlation matrix.

2004-06-22  Stefan Jahn  <stefan@lkcc.org>

	* devices/jfet.cpp: Using 'Type' property for model polarity,
	i.e. n-channel or p-channel junction fet.

2004-06-20  Stefan Jahn  <stefan@lkcc.org>

	* devices/jfet.cpp: Implemented non-ideal saturation current
	parameters of gate-source and gate-drain diodes.
	Also prepared JFET model for n- and p-type devices.

2004-06-19  Stefan Jahn  <stefan@lkcc.org>

	* devices/device.h (class device): New class containing some
	arbitrary routines for non-linear devices.

	* devices/jfet.cpp: Implemented junction capacitances using
	the model parameter Fc.

2004-06-10  Stefan Jahn  <stefan@lkcc.org>

	* jfet.cpp: Implemented S-parameters and operating points of
	junction FET.

2004-06-09  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp: Using symbolic names for anode and cathode node.
	Incorporated transit time 'Tt' parameter into operating point
	information.

2004-06-06  Stefan Jahn  <stefan@lkcc.org>

	* jfet.cpp: Corrections in the jfet Shichman-Hodges equations
	and derivatives.

	* diode.cpp: Fixed a bug in splitting and disabling resitances
	from devices.

2004-06-05  Stefan Jahn  <stefan@lkcc.org>

	* jfet.h (class jfet): Started to implement the DC model of
	a simple junction FET.
